--- a/critical/Devias-kit-register.yaml
+++ b/critical/Devias-kit-register.yaml
@@ -13,6 +13,7 @@ requests:
       - "{{BaseURL}}/auth/jwt/register"
       - "{{BaseURL}}/auth-demo/register/classic"
       - "{{BaseURL}}/auth-demo/register/modern"
+    redirects: false      
     matchers-condition: and    
     matchers:
       - type: word
