--- a/critical/Devias-kit-register.yaml
+++ b/critical/Devias-kit-register.yaml
@@ -12,14 +12,13 @@ requests:
     path:
       - "{{BaseURL}}/auth/jwt/register"
       - "{{BaseURL}}/auth-demo/register/classic"
-      - "{{BaseURL}}/auth-demo/register/modern"
-    redirects: false      
+      - "{{BaseURL}}/auth-demo/register/modern"    
     matchers-condition: and    
     matchers:
       - type: word
         part: body
         words: 
-          - "register"
+          - "Terms and Conditions"
       - type: status
         status:
           - 200
